Implements get device and get all devices - Fixes in endpoints - Name of responses simplified - Updated name of endpoints - Swagger updated - New dto for data body
